# handelsregister-scraper

./: .env.example  .gitignore  .railway-trigger  .railwayignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.stealth  LICENSE  Makefile  QUICKSTART.md  README.md  advanced_monitoring.py  config.py  docker-compose.stealth.yml  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements-test.txt  requirements.txt  run_officer_linkedin.py  run_stealth.py  run_stealth_scraper.py  test_stealth_local.py
.claude/: launch.json
.github/workflows/: ci.yml
config/: investors.yaml  keywords.yaml
datasette/: metadata.json
deployment/: .env.example  Dockerfile  railway.toml  start.sh
export/: __init__.py  exporters.py
persistence/: __init__.py  database.py
processing/: __init__.py  ad_capture.py  brand_name_scorer.py  capital_detector.py  emergence_matcher.py  filters.py  founder_tagger.py  investor_matcher.py  keyword_loader.py  officer_extractor.py  officer_linkedin_search.py  startup_scorer.py  vo_capture.py
scheduler/: __init__.py  main.py  notifications.py  rate_limiter.py  scheduler.py
scheduler/jobs/: __init__.py  ad_backfill_job.py  announcement_job.py  backfill_job.py  csv_export_job.py  discovery_job.py  enrichment_job.py  founder_matcher.py  hn_show_job.py  idea_cluster_job.py  idea_fts_setup_job.py  idea_gap_queries.py  idea_llm_extract_job.py  idea_loader_job.py  idea_opportunity_score_job.py  idea_relabel_clusters_job.py  idea_similar_job.py  idea_tag_canonicalize_job.py  idea_umap2d_job.py  investor_detection_job.py  (+10 more)
scripts/: advanced_monitoring.py  backfill_ad_data.py  backfill_scores.py  backfill_stealth_detection.py  dump_idea_tables.py  export_founders.py  idea_gap_rank.py  idea_gap_report.py  import_investors.py  legacy_scraper.py  repair_bad_canonicals.py  run_datasette.sh  run_officer_linkedin.py  run_stealth.py  run_stealth_scraper.py  sample_investors.csv  scan_new_registrations.py  stealth_scraper_supervisor.sh  sync_db.py  sync_founders.py  sync_to_railway.py  tag_founders.py  tag_normalize.py  upload_db_to_railway.py  validate_pipeline.py  vc_funds_full_import.csv  vc_funds_import.csv
sources/: __init__.py  accelerator_scraper.py  announcements.py  bundesapi.py  company_classifier.py  google_search.py  hn_show_scraper.py  linkedin_scraper.py  news_monitor.py  offeneregister.py  playwright_ddg_scraper.py  playwright_scraper.py  portfolio_scraper.py  reddit_ideas_scraper.py  website_finder.py  website_scraper.py
tests/: conftest.py  pytest.ini  test_stealth_local.py
web/: __init__.py  app.py  dependencies.py
(+46 files in other folders)
